# mach-sosp-2025-artifact-evaluation

./: .gitignore  Cargo.toml  Makefile  README  exact-queries.sh  influx.conf  rustfmt.toml
data/: Cargo.toml  build.rs
data/pb-rs/: opentelemetry.proto.collector.logs.v1.rs  opentelemetry.proto.common.v1.rs  opentelemetry.proto.logs.v1.rs  opentelemetry.proto.metrics.v1.rs  opentelemetry.proto.trace.v1.rs
data/src/: kv_op.rs  lib.rs  otlp.rs  packet.rs  page_cache.rs  record.rs  record_bytes.rs  syscall.rs
end-to-end/: Cargo.toml
end-to-end/src/: mach_rocksdb_p1.rs  main.rs
evaluation-logs/: ab-mach-ablation-noindex-120  ab-mach-ablation-noindex-20  ab-mach-ablation-noindex-300  ab-mach-ablation-noindex-60  ab-mach-ablation-noindex-600  ab-mach-ablation-onlyrange-120  ab-mach-ablation-onlyrange-20  ab-mach-ablation-onlyrange-300  ab-mach-ablation-onlyrange-60  ab-mach-ablation-onlyrange-600  ab-mach-ablation-onlytime-120  ab-mach-ablation-onlytime-20  ab-mach-ablation-onlytime-300  ab-mach-ablation-onlytime-60  ab-mach-ablation-onlytime-600  ab-mach-ablation-timerange-120  ab-mach-ablation-timerange-20  ab-mach-ablation-timerange-300  ab-mach-ablation-timerange-60  ab-mach-ablation-timerange-600  e2e-fishstore-app-exact-microbenchmark-120  e2e-fishstore-app-exact-microbenchmark-300  e2e-fishstore-app-exact-microbenchmark-60  e2e-fishstore-app-exact-microbenchmark-600  e2e-fishstore-app-rocksdb-p1  e2e-fishstore-app-rocksdb-p2  e2e-fishstore-app-rocksdb-p3  e2e-fishstore-app-valkey-p1  e2e-fishstore-app-valkey-p2  e2e-fishstore-app-valkey-p3  e2e-influx-app-dropped-rocksdb-p1  e2e-influx-app-dropped-rocksdb-p2  e2e-influx-app-dropped-rocksdb-p3  e2e-influx-app-dropped-valkey-p1  e2e-influx-app-dropped-valkey-p2  e2e-influx-app-dropped-valkey-p3  e2e-influx-app-rocksdb-p1  e2e-influx-app-rocksdb-p2  e2e-influx-app-rocksdb-p3  e2e-influx-app-valkey-p1  (+38 more)
figures/: ablation.py  common.py  ingest-indexing.py  ingest-scaling.py  parse-output.py  probe-effect.py  rocksdb-end-to-end-query.py  valkey-end-to-end-query.py
figures/data/: ablation.csv  e2e_rocksdb.csv  e2e_valkey.csv  ingest-scaling.csv  probe_effects.csv
file-writer-app/: Cargo.toml
file-writer-app/src/: main.rs
influx-app/: Cargo.toml  README.md
influx-app/src/: main.rs
ingest-indexing/: Cargo.toml
ingest-indexing/src/: main.rs
ingest-scaling/: Cargo.toml
ingest-scaling/src/: main.rs
mach-app/: Cargo.toml
mach-app/src/: main.rs
mach-lib/: .gitignore  Cargo.toml
mach-lib/src/: aligned.rs  block.rs  constants.rs  error.rs  flat_bytes.rs  io-test.rs  lib.rs  partitions.rs  persistent_read_ctx.rs  persistent_write_ctx.rs  range_index.rs  read_only_block.rs  read_only_chunk.rs  schema.rs  storage2.rs  tsl.rs  tsl_iouring.rs  utils.rs
mach-lib/usage/: Cargo.toml
mach-lib/usage/src/: main.rs
replay/: Cargo.toml
replay/src/: data-stats.rs  tcp-replay.rs
replay/src/old/: lib.rs.old  motivating-example.rs  tcp.rs.old
rocksdb-workload/: Cargo.toml  README.md  build.rs  build.sh  build_and_run.sh  drop-caches.sh  fishstore-record.sh  raw-write-to-file.sh
rocksdb-workload/src/: main.rs  page_cache_bpf_lib.rs  query_latency_timeline.rs  rocksdb_lib.rs  syscall_bpf_lib.rs
rocksdb-workload/src/bpf/: page_cache.bpf.c  syscall_latency.bpf.c
tcp-channel/: Cargo.toml
tcp-channel/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
valkey-workload/: Cargo.toml  README.md  build.rs  build_and_run.sh
valkey-workload/.cargo/: config.toml
valkey-workload/src/: main.rs  packet_filter.rs  syscall_bpf_lib.rs  tcp_dump.rs  valkey_load.rs
valkey-workload/src/bpf/: packet_filter.bpf.c  tc.bpf.c
