[workspace]
resolver = "2"

members = [
	"data", "end-to-end", "replay",
	"rocksdb-workload", "tcp-channel",
	"valkey-workload", "mach-lib", "mach-app", "influx-app", "file-writer-app",
	"ingest-scaling", "ingest-indexing"
]

[workspace.dependencies]
rand = "0.8.5"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
chrono = "0.4.26"
libc = "0.2"
core_affinity = "0.8.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
ordered-float = "4"
serde_json = "1.0"
lzzzz = "1"
serde_with = "3.8.1"
memmap2 = "0.9.0"
bincode = "1"
libbpf-rs = "0.21.2"
libbpf-cargo = "0.21.2"
num = "0.4.3"
tonic = { version = "0.10", features = ["gzip"] }
numtoa = "0.2.4"
fxhash = "0.2.1"
dashmap = "6.1.0"
questdb-rs = "4"
tokio = { version = "1", features = ["full"] }

influxdb_iox_client = { path = "../influxdb/influxdb_iox_client" }
influxdb-line-protocol = { path = "../influxdb/influxdb_line_protocol" }
utils = { path = "utils" }
data = { path = "data" }
replay = { path = "replay" }
tcp-channel = { path = "tcp-channel" }
mach-lib = { path = "mach-lib" }

[profile.release]
opt-level = 3
debug = true
