[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
influxdb-line-protocol = "2.0.0"
influxdb = "0.7.2"

utils = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
lzzzz = { workspace = true }
numtoa = { workspace = true }
questdb-rs = { workspace = true }

[build-dependencies]
tonic-build = "0.10"
