[package]
name = "mach-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.188", features=["derive"] }
bincode = "1.3.3"
libc = "0.2.149"
serde_arrays = "0.1.0"
dashmap = "5.5.0"
crossbeam = "0.8.2"
fxhash = "0.2.1"
seqlock = "0.2.0"
minstant = "0.1.7"
memmap2 = "0.9"
io-uring = "0.7"
rand = "0.8.5"

[features]
ramdisk = []

[[bin]]
name = "io-test"
path = "src/io-test.rs"

