[package]
name = "valkey-load"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only OR BSD-2-Clause"

[dependencies]
uuid = { version = "1", features = [ "v4", "fast-rng" ] }
redis = "0.27.5"
nix = { version = "0.26", default-features = false, features = ["net", "user"] }
ctrlc = "3.4.5"
gettid = "0.1.3"
libbpf-sys = "1.5"

clap = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
libbpf-rs = { workspace = true }
libc = { workspace = true }
utils = { workspace = true }
data = { workspace = true }

[build-dependencies]
libbpf-cargo = { workspace = true }
